# ScriptWeaver

./: .dockerignore  .gitignore  Dockerfile  README.md  demo.sh  docker-compose.yml  pyproject.toml  run.py  剧本YAML格式说明.md
docs/: ai-adaptation-workflow.md  screenplay-yaml-schema.md
scriptweaver/: __init__.py  __main__.py  cli.py
scriptweaver/ai/: __init__.py  llm_plan_provider.py  llm_provider.py  llm_screenplay_provider.py  mock_provider.py  provider.py
scriptweaver/api/: __init__.py  app.py
scriptweaver/domain/: __init__.py  analysis_validation.py  models.py  plan_validation.py  screenplay_validation.py  uncertainty_validation.py  workflow.py
scriptweaver/export/: __init__.py  yaml_exporter.py
scriptweaver/llm/: __init__.py  client.py  deepseek.py  openai_compatible.py  qwen.py
scriptweaver/persistence/: __init__.py  repository.py
scriptweaver/services/: __init__.py  adaptation_service.py  chapter_splitter.py  progress.py
scriptweaver/web/: index.html
tests/: test_adaptation_service.py  test_analysis_validation.py  test_api.py  test_app_entrypoint.py  test_chapter_splitter.py  test_cli.py  test_dependencies.py  test_domain_models.py  test_e2e_workflow.py  test_health.py  test_http_e2e.py  test_llm_plan_provider.py  test_llm_provider.py  test_llm_screenplay_provider.py  test_mock_ai_provider.py  test_mock_provider.py  test_packaging_config.py  test_persistence.py  test_plan_validation.py  test_screenplay_validation.py  test_structured_llm_clients.py  test_uncertainty_validation.py  test_web_assets.py  test_workflow.py  test_yaml_export.py
(+1 files in other folders)
