[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptweaver"
version = "0.1.0"
description = "AI-assisted novel-to-screenplay conversion tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
scriptweaver = "scriptweaver.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
